--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "^2.8.0",
+    "react-native-screens": "~2.2.0",
+    "react-native-super-grid": "^4.0.2",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
