--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/material-top-tabs": "^5.2.10",
@@ -20,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.2",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.10.1",
@@ -27,6 +31,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-super-grid": "^4.0.2",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
