--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "expo": "~37.0.3",
+    "expo-facebook": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
