--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-super-grid": "^4.0.2",
     "react-native-svg": "^12.1.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
